<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleLog.DetalleLogActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@color/colorFondo2">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorFondo2"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/menu"
                    android:layout_width="30dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="12dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/menu" />

                <TextView
                    android:id="@+id/elVerol"
                    android:layout_width="280dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/vogue"
                    android:text="EL VEROL"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="36sp" />

                <ImageView
                    android:id="@+id/carrito"
                    android:layout_width="30dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="12dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/carrito" />

            </LinearLayout>

        </android.support.v7.widget.Toolbar>
        
    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">


        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

            <include layout="@layout/product_detaillog" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

            <Button
                android:id="@+id/menos"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="-"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cantidadcarrito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:text="0" />

            <Button
                android:id="@+id/masss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="+"
                android:textSize="30sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

            <Button
                android:id="@+id/alcarrito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Añadir al Carrito"
                android:textSize="30sp" />
        </LinearLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>