...
        android:layout_marginLeft="8dp"
        android:inputType="textPassword"
        android:layout_marginTop="290dp"
        android:hint="Contraseña" />

    <Button
        android:id="@+id/iniciarsesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="390dp"
        android:fontFamily="@font/vogue"
        android:onClick="onClickLogin"
        android:text="Iniciar sesion"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
