...
                    android:text="EL VEROL"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="36sp" />

                <ImageView
                    android:id="@+id/carritoa"
                    android:layout_width="30dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="12dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/carrito" />
            </LinearLayout>
...
    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <include layout="@layout/category_list" />
    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>
